# flight

./: .env.example  .gitignore  README.md  project.prd  pyproject.toml  requirements.txt  test_threadpool.py
flight_client/: example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_threadpool.py
flight_client/flight_client/: __init__.py  client.py  env_utils.py  test_client.py
flight_server/: env_utils.py  job_registry.py  main.py  pyproject.toml  query_runner.py  s3_utils.py  setup.py
flight_server/flight_server/: __init__.py  env_utils.py  file_discovery.py  job_registry.py  main.py  query_runner.py  s3_utils.py
flight_server/flight_server/middleware/: prometheus.py
flight_server/flight_server/routes/: __init__.py  files.py  query.py
flight_server/middleware/: __init__.py  prometheus.py
flight_server/routes/: health.py  metrics.py  query.py
scripts/: generate_test_data.py  server_manager.py
