[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight"
version = "0.1.0"
description = "Flight Server and Client for SQL query execution"

[project.scripts]
flight-server = "flight_server.main:app"
flight-client = "flight_client.client:main"

[tool.uv]
required-version = "0.7.8"
