[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight"
version = "0.1.0"
description = "Flight server"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "duckdb>=0.8.0",
    "python-multipart>=0.0.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=0.19.0",
    "prometheus-client>=0.14.1",
    "pyarrow>=7.0.0",
    "boto3>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flight_server"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.26.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
flight-server = "flight_server.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
